<resources>
    <string name="app_name">PoS</string>
    <string name="main_title">Stamford POS Application</string>
    <string name="user">User:</string>
    <string name="pass">Password:</string>
    <string name="rememberMe">Remember me</string>
    <string name="login">Login</string>
    <string name="command_title">Command Center</string>
    <string name="newProduct">New Product</string>
    <string name="productDet">Product Detail</string>
    <string name="playMusic">Play Music</string>
    <string name="stopMusic">Stop Music</string>
    <string name="macarons">Macarons</string>
    <string name="drinks">Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="icecreams">Ice-creams</string>
    <string name="thaidishes">Thai Dishes</string>
    <string name="fruits">Fruits</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="totalprice">Total Price:</string>
    <string name="submitOrder">Submit Order</string>
    <string name="retrieveOrder">Retrieve Order</string>
    <string name="id_fragment_product">ID:</string>
    <string name="na_fragment_product">Name:</string>
    <string name="setting_title">Stamford POS Setting</string>
    <string name="submitOrderRemote">Submit Order Remote</string>
    <string name="retrieveOrderRemote">Retrieve Order Remote</string>
    <string name="uploadDailyReport">Upload Daily Report</string>
    <string name="searchContact">Search Contact</string>
    <string name="uploadDailyRemote">Upload Daily Remote</string>
    <string name="staffID">Staff \u0020 \u0020 ID:</string>
    <string name="branchID">Branch ID:</string>
    <string name="staff_ID">Staff ID</string>
    <string name="branch_ID">Branch ID</string>
    <string name="setup">SetUp</string>
    <string name="setupBranchAndStaff">Setup Branch / Staff</string>
    <string name="staff_id">Staff ID:</string>
    <string name="userID">User ID:</string>
    <string name="creAt">Create At:</string>
    <string name="updAt">Update At:</string>
    <string name="orderID">Order ID:</string>
    <string name="productNa">Product Name:</string>
    <string name="qty" translatable="false">QTY:</string>
    <string name="stotal">Subtotal:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="order_ID">Order ID</string>
    <string name="product_ID">Product ID</string>
    <string name="product_Na">Product Name</string>
</resources>