<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListProduct"
        android:layout_width="631dp"
        android:layout_height="798dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/staffID"
                android:textColor="#2eb82e"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/staffID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SID"
                android:textColor="#2eb82e"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/branchID"
                android:textColor="#2eb82e"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/branchID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="BID"
                android:textColor="#2eb82e"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="#29a329"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#29a329"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="#29a329"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                android:textColor="#29a329"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListOrder"
            android:layout_width="625dp"
            android:layout_height="250dp"
            android:background="#e6ffe6"></androidx.recyclerview.widget.RecyclerView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalprice"
                android:textColor="#2eb82e"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPriceCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="0฿"
                android:textColor="#2eb82e"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="625dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#70db70"
                android:onClick="onClickedBtnSubmit"
                android:text="@string/submitOrder" />

            <Button
                android:id="@+id/btn_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00cc7a"
                android:onClick="onClickedBtnRetrieve"
                android:text="@string/retrieveOrder" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>