<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_orderline"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="#adebad"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/orderID"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orderID"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Order ID"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/productNa"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/prodName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Product Name"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="QTY:"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="QTY"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/stotal"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Subtotal"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_weight=".5"
        android:text="@string/delete"
        android:textColor="#FFFEFE"
        android:textStyle="bold" />

    <Button
        android:id="@+id/update_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/update"
        android:textColor="#FFFEFE"
        android:textStyle="bold" />
</LinearLayout>