<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#adebad"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    tools:layout_editor_absoluteX="-17dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userID"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="UID"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branchID"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/branID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="BID"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_id"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/stafID"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="SID"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creAt"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/creAt"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Create At"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updAt"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/updAt"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Update At"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>