<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetUpActivity">

    <EditText
        android:id="@+id/editTextTextPersonStaffID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/staff_ID"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonBranchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/branch_ID"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonStaffID"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonStaffID" />

    <Button
        android:id="@+id/btn_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#70db70"
        android:text="@string/setup"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonBranchID"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonBranchID" />
</androidx.constraintlayout.widget.ConstraintLayout>